--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -26,7 +26,7 @@ tests_config:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
 #    - test_check_search_via_button
-#    - test_export_financial_transactions_csv
+    - test_export_financial_transactions_csv
     - test_export_financial_transactions_xls
 
 #  #General
