--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,13 +1,13 @@
 brands:
 
-- name: triomarkets
-  config_file: triomarkets.yml
-- name: ogtrade
-  config_file: ogtrade.yml
-- name: fm-fx
-  config_file: fm-fx.yml
-- name: brokerxp
-  config_file: brokerxp.yml
+#- name: triomarkets
+#  config_file: triomarkets.yml
+#- name: ogtrade
+#  config_file: ogtrade.yml
+#- name: fm-fx
+#  config_file: fm-fx.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
 - name: finmarket
   config_file: finmarket.yml
 - name: fxpmarkets
@@ -22,8 +22,6 @@ brands:
   config_file: gmo.yml
 - name: gmo-dev
   config_file: gmo-dev.yml
-- name: mtxplus
-  config_file: mtxplus.yml
 - name: 24fxm
   config_file: 24fxm.yml
 - name: stoxmarket
