--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -76,19 +76,19 @@ tests_config:
 #    - test_check_week_tab
 #    - test_check_month_tab
 #     - test_check_add_tasks_calendar_view #preconditions convert lead
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
-##    - test_check_all_tab_from_financial_transactions
-##    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-##    - test_check_search_via_button # Check search using search button
-#     - test_export_financial_transactions_csv
-#     - test_export_financial_transactions_xls
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
+#    - test_check_all_tab_from_financial_transactions
+#    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+#    - test_check_search_via_button # Check search using search button
+     - test_export_financial_transactions_csv
+     - test_export_financial_transactions_xls
 #- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
 #  class: CreateDocument
 #  tests:
 #    - test_create_documents
-- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
-  class: AffiliateModule
-  tests:
-     - test_create_affiliate
+#- module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
+#  class: AffiliateModule
+#  tests:
+#     - test_create_affiliate
