--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -4,58 +4,58 @@ brands:
   config_file: triomarkets.yml
 - name: ogtrade
   config_file: ogtrade.yml
-- name: fm-fx
-  config_file: fm-fx.yml
-- name: brokerxp
-  config_file: brokerxp.yml
-- name: finmarket
-  config_file: finmarket.yml
-- name: fxpmarkets
-  config_file: fxpmarkets.yml
-- name: soarfx
-  config_file: soarfx.yml
-- name: highfx
-  config_file: highfx.yml
-- name: mlnfx
-  config_file: mlnfx.yml
-- name: gmo
-  config_file: gmo.yml
-- name: gmo-dev
-  config_file: gmo-dev.yml
-- name: 24fxm
-  config_file: 24fxm.yml
-- name: stoxmarket
-  config_file: stoxmarket.yml
-- name: alphabetfx
-  config_file: alphabetfx.yml
-- name: kbcapitals
-  config_file: kbcapitals.yml
-- name: oinvestsa
-  config_file: oinvestsa.yml
-- name: rimarkets-staging
-  config_file: rimarkets-staging.yml
-- name: itrader
-  config_file: itrader.yml
-- name: itrader_global
-  config_file: itrader_global.yml
-- name: otcapital
-  config_file: otcapital.yml
-- name: urf
-  config_file: urf_financial.yml
-- name: gmo
-  config_file: gmo_trading.yml
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: kayafx
-  config_file: kaya_fx.yml
+#- name: fm-fx
+#  config_file: fm-fx.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
+#- name: finmarket
+#  config_file: finmarket.yml
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+#- name: soarfx
+#  config_file: soarfx.yml
+#- name: highfx
+#  config_file: highfx.yml
+#- name: mlnfx
+#  config_file: mlnfx.yml
+#- name: gmo
+#  config_file: gmo.yml
+#- name: gmo-dev
+#  config_file: gmo-dev.yml
+#- name: 24fxm
+#  config_file: 24fxm.yml
+#- name: stoxmarket
+#  config_file: stoxmarket.yml
+#- name: alphabetfx
+#  config_file: alphabetfx.yml
+#- name: kbcapitals
+#  config_file: kbcapitals.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
+#- name: rimarkets-staging
+#  config_file: rimarkets-staging.yml
+#- name: itrader
+#  config_file: itrader.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#- name: otcapital
+#  config_file: otcapital.yml
+#- name: urf
+#  config_file: urf_financial.yml
+#- name: gmo
+#  config_file: gmo_trading.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
 
 # new brands - never testing before
-- name: itrader-il
-  config_file: itrader-il.yml
-- name: tycoonfx
-  config_file: tycoonfx.yml
-- name: capitalmarketsbanc
-  config_file: capitalmarketsbanc.yml
+#- name: itrader-il
+#  config_file: itrader-il.yml
+#- name: tycoonfx
+#  config_file: tycoonfx.yml
+#- name: capitalmarketsbanc
+#  config_file: capitalmarketsbanc.yml
 
 
 
