--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -18,8 +18,8 @@ brands:
 #  config_file: optionstars.yml
 #- name: uft
 #  config_file: uft.yml
-#- name: brokerz
-#  config_file: brokerz.yml
+- name: brokerz
+  config_file: brokerz.yml
 #- name: 4xfx
 #  config_file: 4xfx.yml
 #- name: herdos
@@ -38,8 +38,8 @@ brands:
 #  config_file: bots.yml
 #- name: kontofx
 #  config_file: kontofx.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
 #- name: firstindex
 #  config_file: firstindex.yml
 #- name: coinstec
