--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -34,5 +34,5 @@ brands:
 #  config_file: kbcapitals_ca.yml
 #- name: mlnfx_ca
 #  config_file: mlnfx_ca.yml
-- name: oinvest_ca
-  config_file: oinvest_ca.yml
+#- name: oinvest_ca
+#  config_file: oinvest_ca.yml
