--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -11,16 +11,16 @@ brands:
 #  config_file: gmo.yml
 #- name: triomarkets
 #  config_file: triomarkets.yml
-- name: rimarkets
-  config_file: rimarkets.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
 #- name: itrader_global
 #  config_file: itrader_global.yml
 #- name: finmarket
 #  config_file: finmarket.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-#- name: fxpmarkets
-#  config_file: fxpmarkets.yml
+- name: fxpmarkets
+  config_file: fxpmarkets.yml
 #- name: soarfx
 #  config_file: soarfx.yml
 #- name: kbcapitals
