--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,6 +1,10 @@
 brands:
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: gmo
+#  config_file: gmo.yml
 
+- name: kbcapitals
+  config_file: kbcapitals.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
