--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,6 +1,7 @@
 brands:
-
-- name: itrader_global
-  config_file: itrader_global.yml
-- name: otcapital
-  config_file: otcapital.yml
+- name: oinvestsa
+  config_file: oinvestsa.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#- name: otcapital
+#  config_file: otcapital.yml
