--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,7 +1,5 @@
 brands:
-- name: oinvestsa
-  config_file: oinvestsa.yml
-#- name: itrader_global
-#  config_file: itrader_global.yml
-#- name: otcapital
-#  config_file: otcapital.yml
+- name: itrader_global
+  config_file: itrader_global.yml
+- name: otcapital
+  config_file: otcapital.yml
