--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,15 +1,15 @@
 tests_config:
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
-#  class: AutorizationProcess
-#  tests:
-#    - test_autorization_process
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Autorization_Process
+  class: AutorizationProcess
+  tests:
+    - test_autorization_process
 
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
   class: CreateNewCustomer
   tests:
     - test_create_new_customer
-##
+
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
   class: ReadCustomerDetails
   tests:
@@ -29,7 +29,7 @@ tests_config:
   class: CreateLead
   tests:
     - test_create_lead_api
-#
+
 - module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
   class: ReadLeads
   tests:
@@ -39,6 +39,8 @@ tests_config:
   class: LoginToken
   tests:
     - test_login_token
+
+
   ###General
 #- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
 #  class: FilterModulesTest
