--- a/src/main/python/ui/crm/model/BrandsXpath/coinstec_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/coinstec_xpath.yml
@@ -23,3 +23,5 @@ AffiliatePage:
   input_methods: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[5]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
   blocked_country_drop_down: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]"
   input_country: "/html/body/bs-modal[3]/div/div/form/bs-modal-body/div/div[6]/div[2]/filter-multi-select/div/div[2]/span[1]/input"
+CALoginPage:
+  check_box_accept: "//*[@id='Top_bar']/div/div/div/div[2]/ul/li[4]/panda-forex-signup/div/div/div[2]/div/div[3]/signup-long/div/form/div[5]/label/span[1]"
