--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,6 +1,6 @@
 brands:
-- name: 2mercados
-  config_file: 2mercados.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: 4xfx
@@ -11,8 +11,8 @@ brands:
 #  config_file: firstindex.yml
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-#- name: b-finance
-#  config_file: b-finance.yml
+- name: b-finance
+  config_file: b-finance.yml
 #- name: aztrades
 #  config_file: aztrades.yml
 #- name: brokerz
@@ -31,8 +31,8 @@ brands:
 #  config_file: olympusmarkets.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
 #- name: swiftcfd
 #  config_file: swiftcfd.yml
 #- name: newrichmarkets
