--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,6 +1,6 @@
 tests_config:
 
-  ###General
+#  ###General
 - module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
   class: FilterModulesTest
   tests:
@@ -25,7 +25,7 @@ tests_config:
   class: LeadModuleTest
   tests:
     - test_perform_convert_lead   # Creates a lead and converts it to a client
-###Clients
+##Clients
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
   class: SearchingClientsTestCRM
   tests:
