--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -5,8 +5,8 @@ brands:
   config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
-#- name: b-traderfx
-#  config_file: b-traderfx.yml
+- name: b-traderfx
+  config_file: b-traderfx.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
