--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,12 +1,15 @@
 brands:
+- name: new_forex_staging
+  config_file: new_forex_staging.yml
+
 #- name: mpcrypto
 #  config_file: mpcrypto.yml
-- name: goldenmarkets
-  config_file: goldenmarkets.yml
+#- name: goldenmarkets
+#  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
-- name: b-traderfx
-  config_file: b-traderfx.yml
+#- name: b-traderfx
+#  config_file: b-traderfx.yml
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
 #- name: jonesmutual
